infrastructure/k8s/visualizer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualizer
  labels:
    app: visualizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visualizer
  template:
    metadata:
      labels:
        app: visualizer
    spec:
      containers:
      - name: visualizer
        image: suchitha20/visualizer:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: visualizer
spec:
  selector:
    app: visualizer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
